--- a/index.html
+++ b/index.html
@@ -5,3 +5,12 @@
         <meta charset="UTF-8">
         <title>Example Page</title>
   </head>
+
+  <body>
+      <h1> It's Hot!
+
+      </h1>
+      <p>stay hydrated.
+
+      </p>
+  </body>
